--- a/register/templates/register/courses.html
+++ b/register/templates/register/courses.html
@@ -195,7 +195,7 @@
               {% endfor %}
             </td>
             <td>
-              <a role="button" class="btn btn-success" href="{% url 'view' index.id %}">View</a>
+              <a role="button" class="btn btn-success" href="{% url 'detals' index.id %}">detals</a>
             </td>
           </tr>
         {% endfor %}
