--- a/register/templates/register/news.html
+++ b/register/templates/register/news.html
@@ -1,6 +1,6 @@
 {% extends 'register/main.html' %}
 {% block content %}
-  {% for item in news %}
+  {% for item in notifictions %}
     {{ item.name }}
     {{ item.description }}
   {% endfor %}
